--- a/index.html
+++ b/index.html
@@ -1,9 +1,75 @@
-<html>
+<html lang="es">
 <head>
-	<title>Daniel García Ayala</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Currículum</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1>Daniel García Ayala</h1>
-	<p>Curricullum Vitae</p>
+    <header>
+        <h1>Currículum de Daniel García Ayala</h1>
+    </header>
+    <main>
+        <section class="informacion-personal">
+            <h2>Información Personal</h2>
+            <p><strong>Nombre:</strong> Daniel García Ayala</p>
+            <p><strong>Dirección:</strong> Calle de la Iglesia 7, 1º Dcha. 28019</p>
+            <p><strong>Teléfono:</strong> +34 717718142</p>
+            <p><strong>Email:</strong> dgayala002@gmail.com</p>
+        </section>
+
+        <section class="experiencia-laboral">
+            <h2>Experiencia Laboral</h2>
+            <ul>
+                <li>
+                    <p><strong>Resanet</strong></p>
+                    <p><em>Cargo:</em> Prácticas encargadas a gestión de Bussiness Intelligence</p>
+                    <p><em>Periodo:</em> Marzo 2023 - Junio 2023</p>
+                    <p>Control de Bussiness Intelligence y Bases de Datos destinadas a bancos, control de ETLs, modificaciones de RPDs y creación y modificación de informes</p>
+                </li>
+                <li>
+                    <p><strong>Acenix Cortos</strong></p>
+                    <p><em>Cargo:</em> Creador de contenido</p>
+                    <p><em>Periodo:</em> Diciembre 2020 - Mayo 2021</p>
+                    <p>Desarollo de pre-producción, producción y post-producción de contenido en diferido, redacción de guiones, realización de diseños gráficos y posicionamiento SEO</p>
+                    <p><i>314 millones de visualizaciones totales en la plataforma Youtube</i></p>
+                </li>
+                <li>
+                    <p><strong>Sandy</strong></p>
+                    <p><em>Cargo:</em> CEO</p>
+                    <p><em>Periodo:</em> Agosto 2019 - Actualidad</p>
+                    <p>Desarollo de pre-producción, producción y post-producción de contenido en directo y en diferido, redacción de guiones, community manager en redes sociales, realización de diseños gráficos y posicionamiento SEO</p>
+                    <p><i>14 millones de visualizaciones totales en la plataforma Youtube</i></p>
+                </li>
+                <li>
+                    <p><strong>Exskills</strong></p>
+                    <p><em>Cargo:</em> CEO</p>
+                    <p><em>Periodo:</em> Junio 2016 - Agosto 2019</p>
+                    <p>Realización de diseños gráficos especializados en GFX y VFX</p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="educacion">
+            <h2>Educación</h2>
+            <ul>
+                <li>
+                    <p><strong>Instituto Juan de la Cierva</strong></p>
+                    <p><em>Grado:</em> Grado Superior en Desarrollo de Aplicaciones Web</p>
+                    <p><em>Periodo:</em> Septiembre 2023 - Actualidad</p>
+                </li>
+                <li>
+                    <p><strong>Instituto Juan de la Cierva</strong></p>
+                    <p><em>Grado:</em> Grado Superior en Desarrollo de Aplicaciones Multiplataforma</p>
+                    <p><em>Periodo:</em> Septiembre 2021 - Junio 2023</p>
+                </li>
+                <li>
+                    <p><strong>Colegio Logos Internacional</strong></p>
+                    <p><em>Grado:</em> Bachillerato Tecnológico</p>
+                    <p><em>Periodo:</em> Septiembre 2018 - Junio 2020</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
